# idea-manager-bot

./: .dockerignore  .env.example  .env.local.example  .env.railway.example  Dockerfile  README.md  open_codex_with_sync.command  pull_and_sync.command  pyproject.toml
docs/: deploy-railway.md  env-setup.md  launch-checklist.md  sync-architecture.md  sync-repo-template.md
incoming/contexts/: context-learning-programming-httpshabrcom.json  context-shared-httpswwwforb.json
scripts/: sync_inbox.py
services/ufc-reporter/: .dockerignore  .env.railway.example  Dockerfile  README.md
services/ufc-reporter/scripts/: export_report_pdf.cjs  run_manual_report.py  run_monitoring_cycle.py
services/ufc-reporter/specs/: stage1-manual-skill-runbook.md  ufc-reporting-blueprint.md
services/ufc-reporter/src/ufc_reporter/: __init__.py  cli.py  config.py  manual_markdown.py  models.py  monitoring.py  normalize.py  rendering.py  state_store.py  telegram.py
services/ufc-reporter/src/ufc_reporter/sources/: __init__.py  espn.py  espn_schedule.py  http.py  mmaoddsbreaker.py  polymarket.py  signals.py  ufc_official.py
services/ufc-reporter/templates/: weekly-monitoring-report-template.md
src/idea_manager_bot/: __init__.py  bot.py  config.py  exporter.py  link_reader.py  llm.py  models.py
src/idea_manager_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
